--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-generic-session": "^2.0.1",
+    "koa-json": "^2.0.2",
+    "koa-passport": "^4.1.1",
+    "koa-redis": "^3.1.3",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.4.20",
     "node-sass": "^4.11.0",
+    "nodemailer": "^6.0.0",
     "nuxt": "^2.4.0",
+    "passport-local": "^1.0.0",
     "sass-loader": "^7.1.0",
     "vue-awesome-swiper": "^3.1.3"
   },
